--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 Python Object-Oriented Programming (OOP) skills. </p>
                     </div>
                     <div class="col-md-4 text-center">
-                        <img src="../code-portfolio/assets/img/myPic.JPG"/>
+                        <img src="../img/myPic.JPG"/>
                         <!-- <div class="anchor"><span class="icon-anchor"></span></div>
                         <h3>Vizualize Me</h3>
 
@@ -300,7 +300,7 @@
                                 <div class="cell-middle skills">
                                     <h4>Know More</h4>
                                     <a target="_blank" rel="noopener noreferrer"
-                                        href="./assets/docs/LoriSrivastava_CV.pdf">
+                                        href="../docs/LoriSrivastava_CV.pdf">
                                         <i class="fa fa-user"></i>
                                     </a>
                                     <h6 class="caps"> <a target="_blank" rel="noopener noreferrer"
