--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lori Srivastava </title>
+    <title>Lori Srivastava</title>
     <link rel="shortcut icon" type="image/x-icon" href="https://static.squarespace.com/universal/default-favicon.ico" />
-    <link rel="canonical" href="http://www.mohitsaxena.com/">
+    <link rel="canonical" href="http://www.lorisrivastava.com/">
     <META name="description"
-        content="Mohit Kumar Saxena is a groomed IT professional having extensive experience in designing and developing enterprise level applications.">
+        content="Lori Srivastava is a passionate Data Scientist looking to solve challenging problems.">
     <META name="keywords"
-        content="mohit,saxena,mohit saxena,technology specialist,cognizant,AI,machine learning,wcm,portal,technology specialist,cognizant,fulcrum,mentor,Java,wcm,cms,database,sql,BPM,html,css,angular,javascript,websphere portal,jquery,angular2">
+        content="lori,srivastava,lori srivastava,artificial intelligence,AI,machine learning,nlp,ml,python,deep learning,database,sql,oracle, data science, data scientist">
 
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic|Montserrat:400,700'
         rel='stylesheet' type='text/css'>
