--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lori Srivastava</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://static.squarespace.com/universal/default-favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/portfolio/chip.png" />
     <link rel="canonical" href="http://www.lorisrivastava.com/">
+    
     <META name="description"
         content="Lori Srivastava is a passionate Data Scientist looking to solve challenging problems.">
     <META name="keywords"
