--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lori Srivastava</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/portfolio/artificial-intelligence.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/lslogo.png" />
     <link rel="canonical" href="http://www.lorisrivastava.com/">
     
     <META name="description"
