--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
                         <div class="anchor"><span class="icon-anchor"></span></div>
                         <h3>About Me</h3>
                         <p class="text-mid" style="text-align:justify">Passionate Software Engineer looking to solve challenging problems.
-                                Aspiring Python and Machine Learning Developer.
-                                Completed 58 hours course on Python Development from Udemy.
-                                Completed live project on Jarvis - A Personal Desktop Assistant
-                                Fundamental understanding of the Python programming language.
-                                Python Object-Oriented Programming (OOP) skills. </p>
+                                Python and Machine Learning Developer.
+                                 </p>
+                        <p>Over the past few months, I’ve had a keen interest in Industrial Revolution 4.0 and the disruption Artificial Intelligence is creating over various industries. I started learning more about it on various education sites and channels and landed on to an online course (which I am currently pursuing) and I had no idea how much fun and interesting this could be. As I progressed in the course, I realized that because of my full-time job of Database Analyst, I could not give time to the Artificial Intelligence course. I often found myself thinking, I wish something on AI was my full-time job and hence I quit my current DBA job to venture out full-fledged in the field of AI.</p>
+                        <p>
+                            You will find me to be well-spoken, energetic, confident, and personable. I also have a wide breadth of experience of the type that will allow you the versatility to place me in a number of contexts with confidence that the level of excellence you expect will be met. Please see my resume for additional information on my experience. 
+                        </p>
                     </div>
                     <div class="col-md-4 text-center">
                         <img src="./assets/img/myPic.JPG"/>
