--- a/index.html
+++ b/index.html
@@ -101,13 +101,30 @@
                     <div class="col-md-8 text-center waypoint-2">
                         <div class="anchor"><span class="icon-anchor"></span></div>
                         <h3>About Me</h3>
-                        <p class="text-mid" style="text-align:justify">Passionate Software Engineer looking to solve challenging problems.
-                                Python and Machine Learning Developer.
+                        <p class="text-mid" style="text-align:justify">I am a Passionate Data Scientist looking to solve challenging problems.
+
                                  </p>
                         <p class="text-mid" style="text-align:justify">Over the past few months, I’ve had a keen interest in Industrial Revolution 4.0 and the disruption Artificial Intelligence is creating over various industries. I started learning more about it on various education sites and channels and landed on to an online course (which I am currently pursuing) and I had no idea how much fun and interesting this could be. As I progressed in the course, I realized that because of my full-time job of Database Analyst, I could not give time to the Artificial Intelligence course. I often found myself thinking, I wish something on AI was my full-time job and hence I quit my current DBA job to venture out full-fledged in the field of AI.</p>
                         <p class="text-mid" style="text-align:justify">
+                            I think my enthusiasm for Artificial Intelligence and ability to learn 
+                            on the fly will serve me well in an ML Engineer/Data Scientist role. 
+                            I’ve outlined how my skills might fit with your specific needs below:
+                        <ul>
+                            <li>Machine Learning: Built a FAQ Retrieval System by research and implementation of various machine learning 
+models and algorithms.</li>
+                            <li>Python: Application of machine learning and algorithmic approach to provide best results
+using Python.</li>
+                            <li>Eager to learn new things: I believe in being a more hands-on person rather than a theoretical bookworm. I take pride in learning new technologies.</li>
+                            <li>Excellent Communication skills: Although I have been working primarily as a Database Analyst, in this capacity I have interfaced frequently with clients (onshore & offshore), in addition to vendors and staff. This has instilled multi-dimensional communication skills and 
+an ability to recognize, act upon, and fulfil customer wishes and needs in order to ensure 
+their continued, and positive, relationship with the business.</li>
+                        </ul>
+                        </p>
+                        <p class="text-mid" style="text-align:justify">
                             You will find me to be well-spoken, energetic, confident, and personable. I also have a wide breadth of experience of the type that will allow you the versatility to place me in a number of contexts with confidence that the level of excellence you expect will be met. Please scroll down to see my resume for additional information on my experience. 
                         </p>
+                        
+                        
                     </div>
                     <div class="col-md-4 text-center">
                         <img src="./assets/img/myPic.JPG"/>
