--- a/index.html
+++ b/index.html
@@ -118,7 +118,25 @@
                             I think my enthusiasm for Artificial Intelligence and ability to learn
                             on the fly will serve me well in an ML Engineer/Data Scientist role.
                             I’ve outlined how my skills might fit with your specific needs below:
-                            
+                            <ul>
+                                <li>
+                                    Machine Learning: Built a FAQ Retrieval System by research and implementation of
+                                    various machine learning
+                                    models and algorithms.
+                                </li>
+                                <li>Python: Application of machine learning and algorithmic approach to provide best
+                                    results
+                                    using Python.</li>
+                                <li>Eager to learn new things: I believe in being a more hands-on person rather than a
+                                    theoretical bookworm. I take pride in learning new technologies.</li>
+                                <li>Excellent Communication skills: Although I have been working primarily as a Database
+                                    Analyst, in this capacity I have interfaced frequently with clients (onshore &
+                                    offshore), in addition to vendors and staff. This has instilled multi-dimensional
+                                    communication skills and
+                                    an ability to recognize, act upon, and fulfil customer wishes and needs in order to
+                                    ensure
+                                    their continued, and positive, relationship with the business.</li>
+                            </ul>
                         </p>
                         <p class="text-mid" style="text-align:justify">
                             You will find me to be well-spoken, energetic, confident, and personable. I also have a wide
