--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                             I think my enthusiasm for Artificial Intelligence and ability to learn
                             on the fly will serve me well in an ML Engineer/Data Scientist role.
                             I’ve outlined how my skills might fit with your specific needs below:
+                            
+                        </p>
+                        <p class="text-mid" style="text-align:justify">
                             <ul>
                                 <li>
                                     Machine Learning: Built a FAQ Retrieval System by research and implementation of
@@ -138,6 +141,7 @@
                                     their continued, and positive, relationship with the business.</li>
                             </ul>
                         </p>
+                       
                         <p class="text-mid" style="text-align:justify">
                             You will find me to be well-spoken, energetic, confident, and personable. I also have a wide
                             breadth of experience of the type that will allow you the versatility to place me in a
