--- a/index.html
+++ b/index.html
@@ -123,11 +123,7 @@
                             <p class="text-mid" style="text-align:justify">
                                 <ul>
                                     <li>
-                                        <p>
-                                            Machine Learning: Built a FAQ Retrieval System by research and implementation of
-                                            various machine learning
-                                            models and algorithms.
-                                        </p>
+                                            Machine Learning: Built a FAQ Retrieval System by research and implementation of various machine learning models and algorithms.
                                     </li>
                                 </ul>
                             </p>
